--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -2,7 +2,7 @@
 	<div id="map">Upgrade your browser, limited support for older browsers coming soon.</div>
 <![endif]-->
 <!--[if gt IE 8]><!-->
-	<div id="map" class="map-micello__api">Loading map...</div>
+	<div id="map" class="map-micello__api"><span class="preloader preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span></div>
 	<%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
 	<%= javascript_include_tag 'map' %>
 	<%= javascript_tag do %>
