--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -11,14 +11,16 @@ $hero-banner-height-lrg: 380 !default;
 	position: fixed;
 	z-index: 1000;
 	width: 100%;
-	border-bottom: 1px solid #bababa;
 
 	/* Non JS users + toggle `position: fixed` via the jQuery toggle menu/search plugin */
 	//&.is-header-unfixed,
 	.no-js & {position: static;}
 
 	/* Centre home page hero banner */
-	&.is-header-hero {position: relative;}
+	&.is-header-hero {
+		position: relative;
+		border-bottom: 1px solid #bababa;
+	}
 
 	/* --Global rules-- */
 
