--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -39,25 +39,30 @@
 </div>
 
 <!-- Availability -->
-<!-- [BACK END] This won't always be available so we need to make sure it doesn't render in the front end -->
-<div class="island detail-view__availability">
-  <h3 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h3>
-  <ul class="detail-view__mrg-base">
-    <% @deal.stores.each do |store| %>
-      <li><a href="<%= centre_deal_path(store.centre.code, @deal.id)%>" class="centres-list"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span><%= store.centre.short_name %><span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a></li>
-    <% end %>
-  </ul>
-</div>
+<% if @deal.stores and @deal.stores.size > 1 %>
+  <!-- [BACK END] This won't always be available so we need to make sure it doesn't render in the front end -->
+  <div class="island detail-view__availability">
+    <h3 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h3>
+    <ul class="detail-view__mrg-base">
+      <% @deal.stores.each do |store| %>
+        <% unless store.id == @store.id %>
+          <li><a href="<%= centre_deal_path(store.centre.code, @deal.id)%>" class="centres-list"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span><%= store.centre.short_name %><span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a></li>
+        <% end %>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 <!-- //Availability -->
-
 <!-- Fine print -->
-<!-- [BACK END] This won't always be available so we need to make sure it doesn't render in the front end -->
-<div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt toggle-content js-toggle-content js-hide-show island">
-  <h3 class="detail-view__hdr-sub hn">The fine print</h3>
-  <% @deal.terms_and_conditions.each do |paragraph| %>
-    <p><%= paragraph %></p>
-  <% end %>
-</div>
+<% if @deal.terms_and_conditions and !@deal.terms_and_conditions.empty? %>
+  <!-- [BACK END] This won't always be available so we need to make sure it doesn't render in the front end -->
+  <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt toggle-content js-toggle-content js-hide-show island">
+    <h3 class="detail-view__hdr-sub hn">The fine print</h3>
+    <% @deal.terms_and_conditions.each do |paragraph| %>
+      <% unless paragraph.empty? %><p><%= paragraph %></p><% end %>
+    <% end %>
+  </div>
+<% end %>
 <!-- //Fine print -->
 
 <%- content_for :javascript do -%>
