--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -39,27 +39,26 @@
 
 <!-- Availability -->
 <% if @deal.stores and @deal.stores.size > 1 %>
-<div class="island detail-view__availability">
-  <h2 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h2>
-  <ul class="detail-view__centres">
-    <% @deal.stores.each do |store| %>
-      <% unless store.id == @store.id %>
-        <li><a href="<%= centre_deal_path(store.centre.code, @deal.id)%>" class="centres-list"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span><%= store.centre.short_name %><span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a></li>
+  <div class="island detail-view__availability">
+    <h3 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h3>
+    <ul class="detail-view__mrg-base">
+      <% @deal.stores.each do |store| %>
+        <% unless store.id == @store.id %>
+          <li><a href="<%= centre_deal_path(store.centre.code, @deal.id)%>" class="centres-list"><span class="icon icon--pin icon--lrg icon--spacing-lrg" aria-hidden="true"></span><%= store.centre.short_name %><span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span></a></li>
+        <% end %>
       <% end %>
-    <% end %>
-  </ul>
-</div>
+    </ul>
+  </div>
 <% end %>
 <!-- //Availability -->
-
 <!-- Fine print -->
 <% if @deal.terms_and_conditions and !@deal.terms_and_conditions.empty? %>
-<div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt toggle-content js-toggle-content js-hide-show island">
-  <h2 class="detail-view__hdr-sub hn">The fine print</h2>
-  <% @deal.terms_and_conditions.each do |paragraph| %>
-    <% unless paragraph.empty? %><p><%= paragraph %></p><% end %>
-  <% end %>
-</div>
+  <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt toggle-content js-toggle-content js-hide-show island">
+    <h2 class="detail-view__hdr-sub hn">The fine print</h2>
+    <% @deal.terms_and_conditions.each do |paragraph| %>
+      <% unless paragraph.empty? %><p><%= paragraph %></p><% end %>
+    <% end %>
+  </div>
 <% end %>
 <!-- //Fine print -->
 
