--- a/app/views/shared/detail_view/_controls.html.erb
+++ b/app/views/shared/detail_view/_controls.html.erb
@@ -2,22 +2,61 @@
 
   <ul class="horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
     <li>
-      <!-- [BACK END] once this button has been submitted append class 'is-saved' and change text to 'Saved' -->
-      <button type="submit" class="detail-view__controls__btn btn"><span class="icon icon--favs icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Save</button></li><!--
-    --><li class="drop-down-container">
-      <button type="button" class="detail-view__controls__btn btn js-drop-down-trigger" aria-haspopup="true" aria-owns="share-options"><span class="icon icon--share icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Share</button>
-      <ul class="social-share drop-down js-drop-down horiz-list" id="share-options">
-        <li class="social-share__facebook"><a href="#"><span class="icon icon--facebook" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a></li>
-        <li class="social-share__twitter"><a href="#"><span class="icon icon--twitter" aria-hidden="true"></span><span class="hide-visually"> Twitter</span></a></li>
-        <li class="social-share__email"><a href="#"><span class="icon icon--email" aria-hidden="true"></span><span class="hide-visually"> Email</span></a></li>
-        <li class="social-share__google"><a href="#"><span class="icon icon--google-plus" aria-hidden="true"></span><span class="hide-visually"> Google+</span></a></li>
-        <li class="social-share__pinterest"><a href="#"><span class="icon icon--pinterest" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a></li>
-      </ul>
+      <!-- [BACK END] this button toggles the saving/unsaving of an item, what needs to be toggled: class `is-saved` and button text 'Save' / 'Saved' -->
+      <button type="button" class="detail-view__controls__btn btn"><span class="icon icon--favs icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Save</button>
+    </li><!--
+    --><li>
+        <div class="drop-down-container">
+
+          <button type="button" class="detail-view__controls__btn btn js-drop-down-trigger" aria-haspopup="true" aria-owns="share-options">
+            <span class="icon icon--share icon--lrg icon--spacing-lrg drop-down-container__non-active" aria-hidden="true"></span><!--
+            --><span class="drop-down-container__non-active">Share</span><!--
+            --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg drop-down-container__active" aria-hidden="true"></span><!--
+            --><span class="drop-down-container__active">Close</span>
+          </button>
+
+          <!-- Social share -->
+          <ul class="social-share drop-down js-drop-down horiz-list horiz-list--fit horiz-list--center" id="share-options">
+
+            <!-- Facebook -->
+            <li class="social-share__facebook">
+              <a href="http://www.facebook.com/sharer/sharer.php?u=<%= current_url %>&amp;t=Deal+Event+Product+title" rel="external" target="_blank"><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a>
+            </li>
+            <!-- //Facebook -->
+
+            <!-- Twitter -->
+            <li class="social-share__twitter">
+              <a href="http://twitter.com/intent/tweet?url=<%= current_url %>&amp;text=Deal+Event+Product+title&amp;via=Westfield" rel="external" target="_blank"><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Twitter</span></a>
+            </li>
+            <!-- //Twitter -->
+
+            <!-- Email -->
+            <li class="social-share__email">
+              <a href="mailto:?subject=A%20subject&amp;body=Hello%0A%0A<%= current_url %>%0A%0AGoodbye."><span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Email</span></a>
+            </li>
+            <!-- //Email -->
+
+            <!-- Google+ -->
+            <li class="social-share__google">
+              <a href="https://plus.google.com/share?url=<%= current_url %>" rel="external" target="_blank"><span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Google+</span></a>
+            </li>
+            <!-- //Google+ -->
+
+            <!-- Pinterest -->
+            <li class="social-share__pinterest">
+              <a href="http://pinterest.com/pin/create/button/?url=<%= current_url %>&amp;media={URI-encoded URL of the image to pin}&amp;description=Hello" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
+            </li>
+            <!-- //Pinterest -->
+
+          </ul>
+          <!-- //Social share -->
+
+        </div>
     </li>
   </ul>
 
   <% if in_lightbox? %>
-    <button type="button" class="btn btn--close"><span class="icon icon--close-sml icon--flush-top" aria-hidden="true"></span> <span class="hide-visually">Close</span></button>
+    <button type="button" class="btn btn--close"><span class="icon icon--close-sml icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Close</span></button>
   <% end %>
 
 </div>
