--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -111,7 +111,7 @@
 <div class="island detail-view__divider--top-non-palm">
   <%- if @centres.present? -%>
     <h3 class="detail-view__hdr-sub detail-view__mrg-off hn">Also available at</h3>
-    <ul>
+    <ul class="detail-view__centres">
       <%- @centres.each do |centre| -%>
         <li>
           <%= link_to centre_product_path(centre_id: centre.code, retailer_code: @product.retailer_code, sku: @product.sku),
