--- a/app/views/shared/detail_view/_controls.html.erb
+++ b/app/views/shared/detail_view/_controls.html.erb
@@ -20,21 +20,15 @@
 
             <!-- Facebook -->
             <li class="social-share__facebook">
-              <a href="http://www.facebook.com/sharer/sharer.php?u=<%= current_url %>&amp;t=Deal+Event+Product+title" rel="external" target="_blank"><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a>
+              <a href="http://www.facebook.com/sharer/sharer.php?u=<%= current_url %>" rel="external" target="_blank"><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a>
             </li>
             <!-- //Facebook -->
 
             <!-- Twitter -->
             <li class="social-share__twitter">
-              <a href="http://twitter.com/intent/tweet?url=<%= current_url %>&amp;text=Deal+Event+Product+title&amp;via=Westfield" rel="external" target="_blank"><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Twitter</span></a>
+              <a href="http://twitter.com/intent/tweet?url=<%= current_url %>" rel="external" target="_blank"><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Twitter</span></a>
             </li>
             <!-- //Twitter -->
-
-            <!-- Email -->
-            <li class="social-share__email">
-              <a href="mailto:?subject=A%20subject&amp;body=Hello%0A%0A<%= current_url %>%0A%0AGoodbye."><span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Email</span></a>
-            </li>
-            <!-- //Email -->
 
             <!-- Google+ -->
             <li class="social-share__google">
@@ -44,9 +38,15 @@
 
             <!-- Pinterest -->
             <li class="social-share__pinterest">
-              <a href="http://pinterest.com/pin/create/button/?url=<%= current_url %>&amp;media={URI-encoded URL of the image to pin}&amp;description=Hello" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
+              <a href="http://pinterest.com/pin/create/button/?url=<%= current_url %>" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
             </li>
             <!-- //Pinterest -->
+
+            <!-- Email -->
+            <li class="social-share__email">
+              <a href="mailto:?subject=Dynamic-Subject&amp;body=Please%20enter%20a%20personal%20message%20to%20yourself%20or%20a%20friend%20%0A%20%0A<%= current_url %>%20%0A%20%0APlease%20notify%20the%20sender%20of%20this%20message%20if%20you%20do%20not%20want%20to%20receive%20further%20emails%20of%20this%20nature%20in%20future."><span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Email</span></a>
+            </li>
+            <!-- //Email -->
 
           </ul>
           <!-- //Social share -->
