--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -13,6 +13,6 @@
     <% end %>
   </ul>
   <div class="map-micello">
-    <%= render partial: 'shared/map', locals: {store_id: nil} %>
+    <%= render partial: 'shared/map', locals: {store_id: nil, js_disabled: false} %>
   </div>
 </div>
