--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -3,7 +3,7 @@
 <![endif]-->
 <!--[if gt IE 8]><!-->
 	<p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to view this map. <a href="http://enable-javascript.com/" rel="external">Visit here</a> for instructions on how to enable JavaScript.</p>
-	<div id="map" class="map-micello__api js-disabled-hide"><span class="preloader preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span></div>
+  <div id="map" class="map-micello__api <%= 'js-disabled-hide' if js_disabled %>"><span class="preloader preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span></div>
 	<%= javascript_include_tag 'http://maps.micello.com/webmap/v0/micellomap.js' %>
 	<%= javascript_include_tag 'map' %>
 	<%= javascript_tag do %>
