Fixed up dates for events

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -335,6 +335,11 @@
   /* Event */
   .detail-view--event {
 
+    /* Schedule */
+    .detail-view__schedule {
+      @include to-rem(padding-bottom, 40);
+    }
+
     /* Meta */
     .detail-view__meta li {
       width: 50%;
